# test-cicd

./: README.md  app.py  index.html  pyproject.toml  test_app.py
.github/workflows/: main.yml  pyproject.toml
