[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helloworld"
version = "0.0.1"
description = "A simple Hello World package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/test-cicd"
Repository = "https://github.com/your-username/test-cicd"
